dark mode toggle bug fix

--- a/style.css
+++ b/style.css
@@ -74,6 +74,77 @@ header * {
     transition: all 0.25s ease-in-out;
     cursor: pointer;
 }
+.bot-btn:hover {
+    background-color: orange;
+    border-color: orange;
+}
+.bot-btn.active {
+    background-color: orange;
+    border-color: orange;
+}
+.bot-chat-container {
+    display: none;
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    width: 310px;
+    height: 410px;
+    border-radius: 10px;
+    background-color: rgb(0, 210, 210);
+    transition: all 0.25s ease-in-out;
+    z-index: 9;
+    clip-path: path(
+        "M 0,0 L 300,0 L 300,290 L 190,290 L 190,400 L 0,400 L 0,0 Z"
+    );
+}
+.bot-chat-container.active {
+    display: block;
+}
+.bot-chat {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 300px;
+    height: 400px;
+    background-color: white;
+    transition: all 0.25s ease-in-out;
+    z-index: 10;
+    border-radius: 10px;
+    clip-path: path(
+        "M 0,0 L 290,0 L 290,280 L 180,280 L 180,390 L 0,390 L 0,0 Z"
+    );
+    overflow: scroll;
+}
+.bot-input {
+    position: fixed;
+    bottom: 20px;
+    width: 172px;
+    height: 105px;
+    border: 2px solid black;
+    font-size: 16px;
+}
+.user-chat {
+    background-color: white;
+    border: 2px solid black;
+    float: right;
+    width: 200px;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    overflow-y: auto;
+    margin-top: 5px;
+}
+.bot-response {
+    background-color: white;
+    border: 2px solid orange;
+    float: left;
+    width: 200px;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    overflow-y: auto;
+    margin-top: 5px;
+}
 
 .portrait-head {
     border: 4px solid rgb(0, 210, 210);
@@ -109,6 +180,7 @@ header * {
     cursor: pointer;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+    overflow: hidden;
 }
 .portrait-head-p2:hover {
     background-color: orange;
@@ -233,7 +305,7 @@ nav:hover span{background-color: #333;}
     height: 50px;
     width: 50px;
     background-color: white;
-    font-size: 200%;
+    font-size: 30px;
     float: left;
     margin: 10px;
     margin-bottom: -10px;
@@ -242,6 +314,8 @@ nav:hover span{background-color: #333;}
     opacity: 1;
     cursor: pointer;
     transition: all 0.25s ease-in-out;
+    justify-content: center;
+    align-content: center;
 }
 .light-toggle-btn:hover {
     background-color: orange;
